my-app/src/app/profile.css
.profileImageGrid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    min-width: max-content;
    margin-top: 20px;
    grid-gap: 1px;
    height: 45vh;
}

.architectImage {
    width: 16vh;
    height: 16vh;
    object-fit: cover;
    border-radius: 1px;
}


.profileName {
    font-weight: bold;
    font-size: 1.25rem;
}

.profileDataContainer {
    display: flex;
}

.profileDataType {
    font-size: 1rem;
    margin-right: 10px;
    margin: 0.25rem;
    font-weight: bold;
}

.profileData {
    margin-left: auto;
    font-size: 1rem;
    margin: 0.25rem;
}

.dataContainer {
    align-content: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.dataContainerVertical {
    align-content: center;
    display: flex;
    flex-direction: row;
    justify-content: center;
    width: -webkit-fill-available;
    justify-content: space-around;
}

.profileDataContainerVertical {
    display: flex;
    flex-direction: column;
}

.architectName {
    font-size: 1.5rem;
    font-weight: bold;
}


.tabContainer {
    display: flex;
    position: relative;
    justify-content: space-around;
    width: 100%;
    color: rgb(105, 105, 105)
}

.tab {
    flex: 1;
    text-align: center;
    cursor: pointer;
    padding: 1rem;
    font-size: 1rem;
    position: relative;
}

.tabIndicator {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 33.33%;
    height: 4px;
    background-color: #000;
    transition: left 0.3s ease;
}

.tabContent {
    min-height: 12vh;
    width: -webkit-fill-available;
    display: flex;
    flex-wrap: wrap;
    align-content: center;
    justify-content: center;
}

.profileContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    max-width: 50%;
    margin-bottom: 20vh;
  }

.profileImageGrid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    min-width: max-content;
    margin-top: 20px;
    grid-gap: 4px;
}

.architectImage {
    width: 15vh;
    height: 15vh;
    object-fit: cover;
    border-radius: 1px;
}

.profileName {
    font-weight: bold;
    font-size: 1.25rem;
}

.profileDataContainer {
    display: flex;
}

.profileDataType {
    font-size: 1rem;
    margin-right: 10px;
    margin: 0.25rem;
}

.profileData {
    margin-left: auto;
    font-size: 1rem;
    margin: 0.25rem;
}

.dataContainer {
    align-content: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.dataContainerVertical {
    align-content: center;
    display: flex;
    flex-direction: row;
    justify-content: center;
    width: -webkit-fill-available;
    justify-content: space-around;
}

.profileDataContainerVertical {
    display: flex;
    flex-direction: column;
}

.architectName {
    font-size: 1.5rem;
    font-weight: bold;
}

.scaleDataContainer {
    display: flex;
    flex-direction: row;
}

.socialMediaContainer {
    cursor: pointer;
    width: 5rem;
    display: flex;
    justify-content: center;
    border-radius: 5px;
    border-width: 1px;
    border-color: grey;
}

.descriptionContainer{
    max-width: 40vh;
    max-height: 80%;
    text-align: center;
    font-style: italic;
    font-size: 0.85rem;
    margin-top: 3vh
}

.button{
    display: flex;
    height: 2rem;
    background: #211f26;
    width: 6rem;
    border-radius: 36px;
    justify-content: center;
    align-content: center;
}


.popupOverlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1000;
}

.popupContent {
    position: relative;
    background: white;
}

.popupImage {
    max-width: 90vw;
    max-height: 90vh;
}

.popupFormContent{
    position: relative;
    background: white;
    min-width: 25rem;
    height: 38rem;
    border-radius: 10px;
}

.architectContactName{
    font-size: 1.5rem;
    font-weight: bold;
    max-width: 17rem;
    text-align: center;
}

.contactContainerFirst {
    margin-top: 2rem;
    margin-bottom: 1rem;
    display: flex;
    flex-direction: row;
}

.contactContainer {
    margin-bottom: 1rem;
    display: flex;
    flex-direction: row;
}

.contactContainerButtons{
    margin-bottom: 1rem;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    position: relative;
}

.contactContainer > input {
    border-bottom: 1px solid gray;
    margin-left: auto;
    width: 13rem;
}

.contactContainer > textarea {
    width: 13rem;
    height: 12rem;
    background: rgba(0, 0, 0, 0.05);
    font-size: 0.9rem;
    text-align: center;
    border-radius: 5px;
    margin-top: 5px;
}

.contactContainerFirst > input {
    border-bottom: 1px solid gray;
    margin-left: auto;
    width: 13rem;
}

.backButton {
    width: 6rem;
    color: black;
    height: 2rem;
    background-color: rgb(230, 230, 230);
    border-radius: 36px;
}

.nextButton {
    width: 6rem;
    color: white;
    height: 2rem;
    background-color: #211f26;
    border-radius: 36px;
    border: unset;
}

.backButton {
    transition: border 0.3s ease-in-out;
}

.nextButton {
    transition: border 0.3s ease-in-out, background-color 0.3s ease-in-out, color 0.3s ease-in-out;
}

.backButton:hover {
    border: 1px solid black;
    background-color: white;
    color: black;

}

.nextButton:hover {
    border: 1px solid black;
    background-color: white;
    color: black;
}

